--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -328,6 +328,7 @@ body.no-scroll {
   padding-top: 1rem;
 }
 #header #mobile-menu {
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
