--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -134,10 +134,16 @@ input[type=text],
 input[type=time],
 input[type=url],
 input[type=week] {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-background-clip: padding;
   -moz-background-clip: padding;
   background-clip: padding-box;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
   border-radius: 0;
   -webkit-appearance: none;
   border: none;
@@ -243,7 +249,9 @@ body.hide_scroll {
 .noselect {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
+  -khtml-user-select: none;
   -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
@@ -260,6 +268,27 @@ body.hide_scroll {
 
 :focus {
   outline: none !important;
+}
+
+@-webkit-keyframes fa-beat {
+  0% {
+    transform: scale(1);
+  }
+  5% {
+    transform: scale(1.25);
+  }
+  20% {
+    transform: scale(1.15);
+  }
+  30% {
+    transform: scale(1.8);
+  }
+  45% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 @keyframes fa-beat {
   0% {
@@ -294,11 +323,6 @@ body.hide_scroll {
 
 header {
   z-index: 3;
-}
-
-::-moz-selection {
-  background: #ff2b59;
-  color: #ffffff;
 }
 
 ::selection {
@@ -412,8 +436,7 @@ body.no-scroll {
   left: 0;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transform: scale(calc(1 + var(--scroll) / 2));
   transition: transform 0.1s linear 0s;
   z-index: 0;
@@ -568,8 +591,7 @@ body.no-scroll {
 #about-us img {
   width: 70%;
   height: 90%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transform: scale(calc(1 + var(--about-us-scroll) / 10));
   transition: transform 0.1s linear 0s;
 }
@@ -616,8 +638,7 @@ body.no-scroll {
 .meet-the-band img {
   transition: filter 0.3s ease;
   aspect-ratio: 116/137;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .meet-the-band a:hover {
   filter: brightness(1.15) saturate(1.2);
@@ -784,10 +805,6 @@ footer li {
 .woocommerce-page h3 {
   font-family: "AlbertSans-ExtraBold" !important;
   text-transform: uppercase;
-}
-.woocommerce a,
-.woocommerce-page a {
-  color: #ebe2d0 !important;
 }
 .woocommerce a:hover,
 .woocommerce-page a:hover {
@@ -1161,4 +1178,4 @@ footer li {
 .woocommerce-page .select2-dropdown {
   background-color: #2a2a2a !important;
   border-color: #444 !important;
-}/*# sourceMappingURL=custom_style.css.map */
+}
