--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -751,6 +751,10 @@ footer li {
   color: #ff2b59 !important;
 }
 
+.woocommerce div.product .woocommerce-tabs ul.tabs li a {
+  color: #000 !important;
+}
+
 .woocommerce,
 .woocommerce-page {
   background-color: #1b1b1b;
