--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -766,6 +766,9 @@ footer {
 		}
 	}
 }
+.woocommerce div.product .woocommerce-tabs ul.tabs li a {
+	color: #000 !important;
+}
 .woocommerce,
 .woocommerce-page {
 	background-color: #1b1b1b;
