--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -1182,5 +1182,5 @@ footer li {
 }
 
 .metal-encyclopedia-icon a:hover svg {
-  fill: #000000;
+  color: black;
 }/*# sourceMappingURL=custom_style.css.map */
