--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -722,6 +722,9 @@ footer li {
 .single-release .social-share ul li a span {
   display: none;
 }
+.single-release .metal-encyclopedia-icon svg {
+  color: white;
+}
 .single-release .metal-encyclopedia-icon a:hover svg {
   color: black;
 }
