--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -727,6 +727,9 @@ footer li {
   width: 18px;
   height: 18px;
 }
+.single-release .metal-encyclopedia-icon svg:hover {
+  color: black;
+}
 .single-release .metal-encyclopedia-icon :hover svg {
   color: black;
 }
