--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -1084,6 +1084,7 @@ footer li {
   margin-bottom: 0.75rem;
   font-size: 16px;
   text-transform: uppercase;
+  padding-bottom: .5rem;
 }
 .woocommerce .single-product .product .summary .variations .variation-option-wrapper .hidden-variation-select,
 .woocommerce-page .single-product .product .summary .variations .variation-option-wrapper .hidden-variation-select {
