--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -134,10 +134,16 @@ input[type=text],
 input[type=time],
 input[type=url],
 input[type=week] {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-background-clip: padding;
   -moz-background-clip: padding;
   background-clip: padding-box;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
   border-radius: 0;
   -webkit-appearance: none;
   border: none;
@@ -243,7 +249,9 @@ body.hide_scroll {
 .noselect {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
+  -khtml-user-select: none;
   -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
@@ -260,6 +268,27 @@ body.hide_scroll {
 
 :focus {
   outline: none !important;
+}
+
+@-webkit-keyframes fa-beat {
+  0% {
+    transform: scale(1);
+  }
+  5% {
+    transform: scale(1.25);
+  }
+  20% {
+    transform: scale(1.15);
+  }
+  30% {
+    transform: scale(1.8);
+  }
+  45% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 @keyframes fa-beat {
   0% {
@@ -294,11 +323,6 @@ body.hide_scroll {
 
 header {
   z-index: 3;
-}
-
-::-moz-selection {
-  background: #ff2b59;
-  color: #ffffff;
 }
 
 ::selection {
@@ -413,8 +437,7 @@ body.no-scroll {
   left: 0;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transform: scale(calc(1 + var(--scroll) / 2));
   transition: transform 0.1s linear 0s;
   z-index: 0;
@@ -569,8 +592,7 @@ body.no-scroll {
 #about-us img {
   width: 70%;
   height: 90%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transform: scale(calc(1 + var(--about-us-scroll) / 10));
   transition: transform 0.1s linear 0s;
 }
@@ -617,8 +639,7 @@ body.no-scroll {
 .meet-the-band img {
   transition: filter 0.3s ease;
   aspect-ratio: 116/137;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .meet-the-band a:hover {
   filter: brightness(1.15) saturate(1.2);
@@ -1085,7 +1106,6 @@ footer li {
   margin-bottom: 0.75rem;
   font-size: 16px;
   text-transform: uppercase;
-  padding-bottom: .5rem;
 }
 .woocommerce .single-product .product .summary .variations .variation-option-wrapper .hidden-variation-select,
 .woocommerce-page .single-product .product .summary .variations .variation-option-wrapper .hidden-variation-select {
@@ -1189,4 +1209,12 @@ footer li {
 .woocommerce-page .select2-dropdown {
   background-color: #2a2a2a !important;
   border-color: #444 !important;
-}/*# sourceMappingURL=custom_style.css.map */
+}
+
+.wc-block-cart-items__header-image, .wc-block-cart-items__header-total {
+  background-color: #1b1b1b !important;
+}
+
+.wc-block-components-sidebar.wc-block-cart__sidebar.wp-block-woocommerce-cart-totals-block, .wp-block-woocommerce-checkout.alignwide.wc-block-checkout {
+  color: #fff !important;
+}
