--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -676,7 +676,8 @@ body.no-scroll {
   text-transform: uppercase;
 }
 .shop-now p {
-  font-family: "AlbertSans-Regular";
+  font-family: "Poppins", sans-serif;
+  color: #000;
 }
 
 /* Shop Product Cards */
@@ -720,13 +721,14 @@ body.no-scroll {
   padding: 10px 30px;
   background-color: #000;
   color: #fff;
-  border-radius: 25px;
+  border-radius: 5px;
   transition: all 0.3s ease;
 }
 .shop-product-card .shop-btn .btn-text {
-  font-family: "AlbertSans-Bold";
+  font-family: "Poppins", sans-serif;
   text-transform: uppercase;
   font-size: 0.9rem;
+  font-weight: 600;
 }
 .shop-product-card:hover .shop-btn {
   background-color: #ff2b59;
