--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -1184,6 +1184,13 @@ footer li {
   font-size: 16px;
   text-transform: uppercase;
 }
+@media (min-width: 600px) {
+  .woocommerce .single-product .product .summary .variations .variation-option-wrapper label,
+  .woocommerce-page .single-product .product .summary .variations .variation-option-wrapper label {
+    display: flex;
+    text-align: center;
+  }
+}
 .woocommerce .single-product .product .summary .variations .variation-option-wrapper .hidden-variation-select,
 .woocommerce-page .single-product .product .summary .variations .variation-option-wrapper .hidden-variation-select {
   display: none !important;
