PageSpeed Insight fixes

--- a/inc/assets/css/responsive.css
+++ b/inc/assets/css/responsive.css
@@ -39,19 +39,10 @@
     font-size: 60px;
   }
   .shop-now {
-    padding: 4rem 0;
+    padding: 8rem;
   }
   .shop-now h2 {
     font-size: 2.5rem;
-  }
-  .shop-now p {
-    font-size: 1rem !important;
-  }
-  .shop-product-card h3 {
-    font-size: 1.3rem !important;
-  }
-  .shop-product-card .product-price .price {
-    font-size: 1.5rem !important;
   }
 }
 @media (max-width: 575px) {
@@ -65,28 +56,12 @@
     font-size: 1.5rem;
   }
   .shop-now {
-    padding: 3rem 0;
+    padding: 8rem 0;
   }
   .shop-now h2 {
-    font-size: 1.8rem;
-  }
-  .shop-now p {
-    font-size: 0.9rem !important;
-    padding: 0 1rem;
-  }
-  .shop-product-card h3 {
-    font-size: 1.1rem !important;
-  }
-  .shop-product-card .product-price .price {
-    font-size: 1.3rem !important;
-  }
-  .shop-product-card .shop-btn {
-    padding: 8px 20px !important;
-  }
-  .view-all-products-btn h3 {
-    font-size: 1.3rem !important;
+    font-size: 1.5rem;
   }
   footer a {
     font-size: 0.85rem;
   }
-}
+}/*# sourceMappingURL=responsive.css.map */
