--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -580,11 +580,14 @@ body.no-scroll {
   align-items: center;
 }
 .albums .social-icons li {
-  margin: 0 5px;
-  font-size: 15px;
+  margin: 0 7px;
+  font-size: 20px;
 }
 .albums .social-icons li a {
   color: #fff;
+}
+.albums .social-icons li:first-child {
+  margin-left: 0;
 }
 
 #about-us {
@@ -1353,7 +1356,7 @@ footer li {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 12px 24px;
-  background: rgba(29, 185, 84, 0.95);
+  background: #ff2b59;
   color: #fff;
   border-radius: 50px;
   border: 2px solid #ff2b59;
