--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -785,6 +785,11 @@ footer {
 			}
 		}
 	}
+	.single-release-product{
+		h3{
+		font-family: $albert-extra-bold;
+		}
+	}
 }
 
 // WooCommerce Styles
