--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -749,6 +749,7 @@ footer li {
 }
 .single-release .single-release-product h3 {
   font-family: "AlbertSans-ExtraBold";
+  font-size: 30px;
 }
 
 .woocommerce a {
