--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -787,7 +787,8 @@ footer {
 	}
 	.single-release-product{
 		h3{
-		font-family: $albert-extra-bold;
+			font-family: $albert-extra-bold;
+			font-size: 30px;
 		}
 	}
 }
