--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -790,6 +790,9 @@ footer {
 			font-family: $albert-extra-bold;
 			font-size: 30px;
 		}
+		.release-cover-img{
+			width: 300px !important;
+		}
 	}
 }
 
