--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -751,7 +751,7 @@ footer li {
   font-family: "AlbertSans-ExtraBold";
   font-size: 30px;
 }
-.single-release .single-release-product .release-cover-img {
+.single-release .single-release-product img {
   width: 300px !important;
 }
 
