--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -790,7 +790,7 @@ footer {
 			font-family: $albert-extra-bold;
 			font-size: 30px;
 		}
-		.release-cover-img{
+		img{
 			width: 300px !important;
 		}
 	}
