--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -752,7 +752,7 @@ footer li {
   font-size: 30px;
 }
 .single-release .single-release-product img {
-  width: 300px !important;
+  width: 10rem !important;
 }
 
 .woocommerce a {
