--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -789,6 +789,7 @@ footer {
 		h3{
 			font-family: $albert-extra-bold;
 			font-size: 30px;
+			text-transform: uppercase;
 		}
 		img{
 			width: 30rem !important;
