god-complex-release

--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -798,6 +798,10 @@ footer {
 			background-color: white;
 			color: black;
 		}
+		.shop-btn:hover{
+			background-color: #ff2b59;
+			color: white;
+		}
 	}
 }
 
