--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -759,6 +759,10 @@ footer li {
   background-color: white;
   color: black;
 }
+.single-release .single-release-product .shop-btn:hover {
+  background-color: #ff2b59;
+  color: white;
+}
 
 .woocommerce a {
   color: #ebe2d0 !important;
